Remove the todo tag about async execution. The UI lag seems negligible
Some lint fixes